# CS6230

hw1_hpc/preliminary_version/: CMakeLists.txt
hw1_hpc/preliminary_version/include/: partition.h  quicksort.h
hw1_hpc/preliminary_version/src/: main.cpp  partition.cpp  quicksort.cpp
hw1_hpc/submitted/hw1_HanTran/: CMakeLists.txt  README  run.sh
hw1_hpc/submitted/hw1_HanTran/include/: partition.h  quicksort.h
hw1_hpc/submitted/hw1_HanTran/src/: main.cpp  partition.cpp  quicksort.cpp
hw2_hpc/hw2_mpi/: CMakeLists.txt  README  main.cpp  run.sh
hw2_hpc/hw2_omp/: CMakeLists.txt  README  main.cpp  run.sh
hw3_hpc/: CMakeLists.txt  Homework 3 report.docx
hw3_hpc/include/: dense_matvec.h
hw3_hpc/src/: dense_matvec.cpp  main.cpp
hw3_task3/: CMakeLists.txt  README  build.sh  run.sh
hw3_task3/src/: dense_matvec.cpp  main.cpp
hw3_task4/: 1138_bus.txt  CMakeLists.txt  README  run.sh
hw3_task4/include/: SpMv.h
hw3_task4/src/: SpMv.cpp  main.cpp
hw3_task6/: CMakeLists.txt  README  main.cpp  run.sh
hw4/src/: main.cpp  partition.cpp  quicksort.cpp
hw4_task1/: CMakeLists.txt  README
hw4_task1/include/: partition.h  quicksort.h
hw4_task1/src/: main.cpp  partition.cpp  quicksort.cpp
hw4_task3/: CMakeLists.txt  README
hw4_task3/include/: Rec_Scan.h
hw4_task3/src/: Rec_Scan.cpp  main.cpp
hw5_task1/: CMakeLists.txt  README
hw5_task1/include/: log_bcast.h  simple_bcast.h
hw5_task1/src/: log_bcast.cpp  main.cpp  simple_bcast.cpp
hw5_task3/: test_MPI_AllGatherv.cpp  test_MPI_Alltoallv.cpp  test_MPI_Gatherv.cpp  test_MPI_Scatterv.cpp
hw5_task4/: CMakeLists.txt  main.cpp  mpi_solved1.cpp  mpi_solved2.cpp  mpi_solved3.cpp  mpi_solved4.cpp  mpi_solved5.cpp  mpi_solved6.cpp  mpi_solved7.cpp
hw6/: CMakeLists.txt  README
hw6/include/: matmul.h
hw6/src/: main.cpp  matmul.cpp
hw7/: CMakeLists.txt  README
hw7/src/: main.cpp
hw8/: CMakeLists.txt
hw8/src/: main.cpp
midterm/: CS_6230_Midterm_HanTran.docx
references/: lect19_mpi_coll_imp.ppt  test_MPI_Alltoallv_Milinda.cpp
reports/: HW5.xlsx  HW6.xlsx  HW8.xlsx  Homework 3 report.docx  Homework 4 report.docx  Homework 5 report.docx  Homework 7 report.docx  Homework8_report.docx
